--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "welcome_home_presentation",
+  "name": "wh_presentation",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.5.0",
+    "confetti-react": "^2.5.0",
+    "fs": "0.0.1-security",
+    "image-size": "^1.0.0",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
