--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@svgr/webpack": "^5.5.0",
         "confetti-react": "^2.5.0",
         "fs": "0.0.1-security",
+        "google-map-react": "^2.2.0",
         "image-size": "^1.0.0",
         "next": "10.2.3",
         "react": "17.0.2",
