--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
         "start": "next start"
     },
     "dependencies": {
+        "@react-google-maps/api": "^2.13.1",
         "@svgr/webpack": "^5.5.0",
+        "all": "0.0.0",
         "confetti-react": "^2.5.0",
         "fs": "0.0.1-security",
         "google-map-react": "^2.2.0",
         "image-size": "^1.0.0",
-        "next": "10.2.3",
-        "react": "17.0.2",
+        "next": "^10.2.3",
+        "react": "^17.0.2",
         "react-dom": "17.0.2"
     }
 }
